<resources>
    <string name="app_name">Moview</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="dummy_text_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="dummy_text_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</string>

    <!-- row_movie -->
    <string name="text_more_info">More Info</string>


    <!-- Errors -->
    <string name="error_try_again">"Oops, something went wrong.Please try again"</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_fetch_comments">Error loading comments…</string>
    <string name="text_try_again">Try again</string>
    <string name="error_send_comment">Failed to send comment. Try again.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search anything…</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="action_search">Search</string>
    <string name="text_movies">Movies</string>
    <string name="text_profile">Profile</string>

    <string name="text_followers">Followers</string>
    <string name="text_following">Following</string>
    <string name="action_logout">Logout</string>
    <string name="text_comment">comment</string>
    <string name="text_comments">Comments</string>
    <string name="text_about">about</string>
    <string name="text_likes">likes</string>
    <string name="text_hint_comment">Add a comment…</string>
    <string name="text_all">All</string>
    <string name="text_comments_of_following">comments of people you follow</string>
    <string name="username">Username</string>
    <string name="action_sign_up">Register</string>
    <string name="text_email">email</string>
    <string name="text_username">username</string>
    <string name="text_password">password</string>
    <string name="text_confirm_password">confirm password</string>
    <string name="text_loading">Loading…</string>
    <string name="text_feed">Feed</string>
    <string name="text_facebook_signin">Entrar com facebook</string>
    <string name="overview">Overview</string>
    <string name="find_out_more">Find out more</string>
    <string name="budged_revenue">Budget/Revenue</string>
    <string name="text_friends_comments">Check your friends comments!</string>
    <string name="text_trailer">Trailer</string>
    <string name="text_sign_in">Sign In</string>

</resources>
